src/objects/OrderUsageRule__c.object
<CustomObject>
    <label>OrderUsageRule</label>
    <nameField>
        <label>OrderUsageRule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrderUsageRules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>AllowanceType__c</fullName>
        <label>Gotransverse Allowance Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargeCategoryEid__c</fullName>
        <label>Gotransverse ChargeCategoryEid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargeCategory__c</fullName>
        <label>Gotransverse ChargeCategory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormulaFieldName__c</fullName>
        <label>Gotransverse FormulaFieldName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormulaFieldvalue__c</fullName>
        <label>Gotransverse Formula Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormulaOperator__c</fullName>
        <label>Gotransverse FormulaOperator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GlobalUsageEid__c</fullName>
        <label>Gotransverse GlobalUsageEid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limit__c</fullName>
        <label>Gotransverse Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunityID__c</fullName>
        <label>Gotransverse OpportunityID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductEid__c</fullName>
        <label>Gotransverse ProductEid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductUsageValue__c</fullName>
        <label>Gotransverse Product Usage Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProratedOnCancel__c</fullName>
        <label>Gotransverse ProratedOnCancel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProratedOnOrder__c</fullName>
        <label>Gotransverse ProratedOnOrder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RateTableEid__c</fullName>
        <label>Gotransverse RateTableEid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RateTableUsageFieldName__c</fullName>
        <label>Gotransverse RateTableUsageFieldName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RateTypeValue__c</fullName>
        <label>Gotransverse RateTypeValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RollOverType__c</fullName>
        <label>Gotransverse RollOverType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RuleType__c</fullName>
        <label>Gotransverse RuleType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Gotransverse Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UsageRateUom__c</fullName>
        <label>Gotransverse UsageRateUom</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UsageRate__c</fullName>
        <label>Gotransverse UsageRate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UsageUom__c</fullName>
        <label>Gotransverse UsageUom</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>